# orbit

./: .gitmodules  CMakeLists.txt
src/: Core.cpp  Core.h  Libraries.h  SpriteManager.cpp  SpriteManager.h  cplus.h  main.cpp  sfmlplus.h
src/lib/: imconfig.h  imgui-SFML.cpp  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
vendors/sfml/examples/island/: Island.cpp
vendors/sfml/examples/sound_capture/: SoundCapture.cpp
vendors/sfml/examples/voip/: Client.cpp  Server.cpp
vendors/sfml/extlibs/headers/AL/: al.h
vendors/sfml/extlibs/headers/FLAC/: all.h  callback.h  format.h  metadata.h  stream_decoder.h  stream_encoder.h
vendors/sfml/extlibs/headers/freetype2/: freetype.h  ftautoh.h  ftcache.h  ftglyph.h  ftgzip.h  ftimage.h  ftincrem.h  ftlist.h  ftmm.h  ftpfr.h  ftstroke.h  ftsystem.h  fttypes.h  ftwinfnt.h  t1tables.h  ttnameid.h  tttables.h
vendors/sfml/extlibs/headers/ogg/: ogg.h
vendors/sfml/extlibs/headers/stb_image/: stb_image.h  stb_image_write.h
vendors/sfml/extlibs/headers/vorbis/: codec.h  vorbisenc.h  vorbisfile.h
vendors/sfml/include/SFML/Audio/: InputSoundFile.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
vendors/sfml/include/SFML/Graphics/: CircleShape.hpp  Color.hpp  ConvexShape.hpp  Font.hpp  Glsl.inl  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  (+11 more)
(+115 files in other folders)
